--- a/src/DifApi/wwwroot/app/tree-view/tree-view.html
+++ b/src/DifApi/wwwroot/app/tree-view/tree-view.html
@@ -10,7 +10,7 @@
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h2>{{currentNode.label}}</h2>
+                    <h2><a href="#!/logs/{{getPathRouteQuery(currentNode)}}">{{currentNode.label}}</a></h2>
                 </div>
                 <div class="panel-body">
                     <table class="table table-striped">
