--- a/src/DifApi/wwwroot/app/index.html
+++ b/src/DifApi/wwwroot/app/index.html
@@ -25,8 +25,8 @@
     <div class="container-fluid">
         <div class="page-header">
             <h1>
-                X-Proxy
-                <small>API Analysis</small>
+                <a href="/">X-Proxy</a>
+                <small>eXplore and analyse your API</small>
             </h1>
 
             <div class="row" ng-controller="Search">
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-        <div class="footer">X-proxy app: v<span app-version></span></div>
+        <div class="footer">X-proxy app: v1.0 beta</div>
     </div>
     <!-- In production use:
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
