--- a/src/DifApi/wwwroot/app/tree-view/tree-view.html
+++ b/src/DifApi/wwwroot/app/tree-view/tree-view.html
@@ -7,7 +7,7 @@
             </abn-tree>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-6" ng-show="currentNode">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h2><a href="#!/logs/{{getPathRouteQuery(currentNode)}}">{{currentNode.label}}</a></h2>
