--- a/src/XProxy.Core/wwwroot/app/index.html
+++ b/src/XProxy.Core/wwwroot/app/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>X-Proxy</title>
+    <title>eXProxy</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="lib/bootstrap-3-3-7-dist/css/bootstrap.min.css" />
@@ -25,8 +25,8 @@
     <div class="container-fluid">
         <div class="page-header">
             <h1>
-                <a href="/">X-Proxy</a>
-                <small>eXplore your API</small>
+                <a href="/">eXProxy</a>
+                <small>eXPlore your API</small>
             </h1>
 
             <div class="row" ng-controller="Search">
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-        <div class="footer">X-proxy app: v1.0 beta</div>
+        <div class="footer">eXProxy app: v1.0 beta</div>
     </div>
     <!-- In production use:
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
