--- a/src/XProxy.Core/wwwroot/app/index.html
+++ b/src/XProxy.Core/wwwroot/app/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="lib/tree/abn_tree.css" />
+    <link rel="stylesheet" href="node_modules/n3-charts/build/LineChart.css" />
+
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="lib/jquery-2.1.1.min.js"></script>
     <script src="lib/bootstrap-3-3-7-dist/js/bootstrap.min.js"></script>
@@ -69,6 +71,8 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
     -->
     <script src="bower_components/angular/angular.js"></script>
+    <script src="node_modules/d3/d3.min.js"></script>
+    <script src="node_modules/n3-charts/build/LineChart.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="app.js"></script>
     <script src="tree-view/tree-view.js"></script>
