JSON to tree converted and comparison UI

--- a/src/XProxy.Core/wwwroot/app/index.html
+++ b/src/XProxy.Core/wwwroot/app/index.html
@@ -75,6 +75,7 @@
     <script src="node_modules/n3-charts/build/LineChart.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="app.js"></script>
+    <script src="compare-view/comparison.js"></script>
     <script src="tree-view/tree-view.js"></script>
     <script src="log-view/log-table.js"></script>
     <script src="components/log-explore/log-explorer.js"></script>
