--- a/src/XProxy.Core/wwwroot/app/compare-view/comparison.html
+++ b/src/XProxy.Core/wwwroot/app/compare-view/comparison.html
@@ -1,12 +1,17 @@
 <div>
-    <h4 class="modal-title">Compare sources</h4>
-</div>
-<div>
     <h2>Compare {{compareStatus}}</h2>
     <p><strong>Source 1: {{source1.originHost}}{{source1.path}}</strong></p>
     <p><strong>Source 2: {{source2.originHost}}{{source1.path}}</strong></p>
     <h3>Headers</h3>
     <div>
+        <form class="form-inline">
+            <div class="form-group-sm">
+                <label>
+                    Show only diffs
+                    <input class="form-control" type="checkbox" value="false" ng-model="showOnlyDiffs" />
+                </label>
+            </div>
+        </form>
         <table class="table table-striped" ng-show="comparison">
             <tr>
                 <th>Key</th>
@@ -16,40 +21,15 @@
                 <th>Score</th>
                 <th>Variants</th>
             </tr>
-            <tr><th colspan="6">Request headers</th></tr>
-            <tr ng-repeat="item in comparison.request">
-                <td><span ng-class="item.value.differences == 0 ? 'label-info' : 'label-danger'">{{item.key}}</span></td>
+            <tr ng-repeat="item in comparison.request" ng-show="!showOnlyDiffs || item.value.differences > 0">
+                <td>{{item.key}}</td>
                 <td>{{item.value.sampleSize}}</td>
-                <td>{{item.value.differences}}</td>
+                <td><span ng-class="item.value.differences == 0 ? 'label-info' : 'label-danger'">{{item.value.differences}}</span></td>
                 <td>{{item.value.missing}}</td>
                 <td>{{item.value.score}}</td>
                 <td>
                     <span ng-if="item.value.values.length != 2" ng-repeat="val in item.value.values">{{val}} </span>
                     <source-diff ng-if="item.value.values.length == 2" id="diff1" text1="item.value.values[0]" text2="item.value.values[1]"></source-diff>
-                </td>
-            </tr>
-            <tr><th colspan="6">Reponse headers</th></tr>
-            <tr ng-repeat="item in comparison.response">
-                <td><span ng-class="item.value.differences == 0 ? 'label-info' : 'label-danger'">{{item.key}}</span></td>
-                <td>{{item.value.sampleSize}}</td>
-                <td>{{item.value.differences}}</td>
-                <td>{{item.value.missing}}</td>
-                <td>{{item.value.score}}</td>
-                <td>
-                    <span ng-if="item.value.values.length != 2" ng-repeat="val in item.value.values">{{val}} </span>
-                    <source-diff ng-sh="item.value.values.length == 2" id="diff1" text1="item.value.values[0]" text2="item.value.values[1]"></source-diff>
-                </td>
-            </tr>
-            <tr><th colspan="6">Reponse body</th></tr>
-            <tr ng-repeat="item in comparison.responseBody">
-                <td><span ng-class="item.value.differences == 0 ? 'label-info' : 'label-danger'">{{item.key}}</span></td>
-                <td>{{item.value.sampleSize}}</td>
-                <td>{{item.value.differences}}</td>
-                <td>{{item.value.missing}}</td>
-                <td>{{item.value.score}}</td>
-                <td>
-                    <span ng-if="item.value.values.length != 2" ng-repeat="val in item.value.values">{{val}} </span>
-                    <source-diff ng-sh="item.value.values.length == 2" id="diff1" text1="item.value.values[0]" text2="item.value.values[1]"></source-diff>
                 </td>
             </tr>
         </table>
