Events + diff engine

--- a/src/XProxy.Core/wwwroot/app/index.html
+++ b/src/XProxy.Core/wwwroot/app/index.html
@@ -49,8 +49,9 @@
                     Logs <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a href="#!/tree">Tree view</a></li>
-                    <li><a href="#!/logs">Table view</a></li>
+                    <li><a href="#!/tree">Request Tree</a></li>
+                    <li><a href="#!/logs">Log Table</a></li>
+                    <li><a href="#!/events/all">Events</a></li>
                 </ul>
             </li>
         </ul>
@@ -75,6 +76,7 @@
     <script src="node_modules/n3-charts/build/LineChart.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="app.js"></script>
+    <script src="event-view/events.js"></script>
     <script src="compare-view/comparison.js"></script>
     <script src="tree-view/tree-view.js"></script>
     <script src="log-view/log-table.js"></script>
