Session storage and fault analysis poc

--- a/src/XProxy.Core/wwwroot/app/event-view/events.html
+++ b/src/XProxy.Core/wwwroot/app/event-view/events.html
@@ -4,6 +4,7 @@
             <tr>
                 <th>Created</th>
                 <th>Path</th>
+                <th>Diffs</th>
                 <th>Type</th>
             </tr>
         </thead>
@@ -14,6 +15,7 @@
                     {{eventItem.title}}
                 </a>
             </td>
+            <td>{{eventItem.data.totalDiffs}}</td>
             <td>{{eventItem.eventType}}</td>
         </tr>
     </table>
